--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ $(document).ready(function(){
 	<div style="color:#004953,text-justify: inter-word;">  
 		<ul>
 		<br>
-			<li> <big><b>Camp’us solidaire </b> </big>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
+			<li> <a href="http://campus-solidaire.strikingly.com/"><b>Camp’us solidaire </b> </a>: lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
 			</li><br>
 
 			<li><a href ="https://www.ideas-box.org/index.php/fr/"><b>Ideas Box de Bibliothèques sans Frontières </b> </a> est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
@@ -832,11 +832,11 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 			</li><br>
 			<li><big><b>“Combien de migrants?” </b> </big>: Marie Labussière et Anna Leccia (ENSAE 2016) ont rédigé leur mémoire d’Histoire de la Statistique (cours de 3A avec L. Davezies et E. Didier) sur la terminologie employée pour décrire les flux migratoires (vocabulaire différencié selon la position dans les champs médiatique, politique, institutionnel ou associatif des acteurs), la production des chiffres et l’usage qui en est fait par les médias et les organisations internationales ainsi qu’une remise en contexte pour comprendre pourquoi le phénomène migratoire et la “crise des migrants” ont été problématisé ainsi. 
 			</li><br>
-	<li>Si vous êtes intéressés par le sujet, n’hésitez pas à suivre le cours de <big><b>“Sociologie des migrations internationales”</b></big> avec S. Toma en 3A. 
+	<li>Si vous êtes intéressés par le sujet, n’hésitez pas à suivre le cours de <a href="http://www.ensae.fr/ensae/fr/formations-navhorizontale-172/statisticien-conomiste-navhorizontale-48/3me-anne-voies-de-spcialisation-formationsdiplome-96/data-science-cours-3a.html?id=103071"><b>“Sociologie des migrations internationales”</b></a>avec S. Toma en 3A. 
 			</li><br>
 
 
-			<li><big><b>Sebastiao Salgado </b></big> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li>
+			<li><a href="https://www.amazonasimages.com/"><b>Sebastiao Salgado </b></a> (inscrit à l’ENSAE en 1969) : le grand photographe d’origine brésilienne a parcouru plus de 100 pays pour exposer les grands conflits et crises humanitaires. Maître de la photographie humaniste en noir et blanc, il cherche à témoigner des paradoxes du progrès et de la place de l’homme sur la Terre. Salgado a réalisé trente-six reportages sur la migrations de populations civiles entre 1994 et 1999, rassemblés dans son livre Exodes en 2000. Ce sont ses photos que vous voyez sur notre site. </li>
 				
 	</div>
 	<div id="alienor"></div>
