--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div style="font-size: 100px;">
 			<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 			</div>
-  			<h1 style="color:#004953"> La crise des migrants : un état des lieux </h1>
+  			<h1 style="color:#004953"> La crise des migrants en Europe : état des lieux </h1>
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
