--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						</li><br>
 <li> <b>“Migrant”</b>  : toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas une statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
 						</li><br>
-<li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “déboutés”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
+<li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
 						</li><br>
 → Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.
 				<br>
