--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 					<div class="row">
 						<section class="4u 6u(medium) 12u$(small)">
 							<h3>Nos sources </h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, cumque!</p>
+							<p>D'où viennent les chiffres présentés ? Difficulté de collecte des données, croisement de plusieurs sources. Les migrants sont évidemment durs à tracer... etc</p>
 							<ul class="alt">
 								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
 								<li><a href="#">Quod adipisci perferendis et itaque.</a></li>
