--- a/index.html
+++ b/index.html
@@ -409,6 +409,10 @@ $(document).ready(function(){
          "address": "http://www.refugeehelp.fr/", 
          "note" : "Aide administrative et juridique à la procédure d’asile, leçons de Français, activités socio-culturelles et aide matérielle..les Sciences pistes s’engagent ! "
        }, {
+         "name": "Kiron",
+         "address": "http://www.sciencespo.fr/sites/default/files/22062016_CP_Sciences%20Po_Kiron.pdf", 
+         "note" : "Sciences Po mets à disposition une sélection de cours sur la plateforme numérique de Kiron pour aider les réfugiés à reprendre leurs études supérieures"
+       },{
          "name": "MigrENS",
          "address": "http://www.migrens.ens.fr/", 
          "note": "Le Programme Etudiant Invité est destiné à l'accueil des réfugié.e.s et des migrant.e.s étudiant.e.s du supérieur au sein de l'Ecole Normale Supérieure. "
