--- a/index.html
+++ b/index.html
@@ -881,8 +881,8 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<ul class="tabular">
 																<li>
 									<h3>Contact</h3>
-									<p>Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
-									Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
+									<p>Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? </p>								
+									<p> Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
 									N'hésitez pas à nous écrire :</p>								
 									<a href="#">lumieresurlesmigrations@gmail.com</a>
 								</li>
