--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ $(document).ready(function(){
 		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
 		<div class="container">
-		<div id="mainBubble" style="height: 869px;"><svg class="mainBubbleSVG" width="1240.3200000000002" height="869"><text id="bubbleItemNote" x="10" y="605.1600000000001" font-size="12" dominant-baseline="middle" alignment-baseline="middle" style="fill: rgb(136, 136, 136);"></text></svg></div></div>
+		<div id="mainBubble" style="height: 869px;"><svg class="mainBubbleSVG" width="1240.3200000000002" height="869"><text id="bubbleItemNote" x="10" y="450.1600000000001" font-size="16" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
    var h = Math.ceil(w * 0.7);
