--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@ $(document).ready(function(){
 
 		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
 		
-		<div class="container">
-		<div id="mainBubble" style="height: 869px;"><svg class="mainBubbleSVG" width="1240.3200000000002" height="869"><text id="bubbleItemNote" x="10" y="350.1600000000001" font-size="14" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div></div>
+		<div id="mainBubble" class="container">
+		<svg class="mainBubbleSVG" width="1240.3200000000002" height="869"><text id="bubbleItemNote" x="10" y="400.1600000000001" font-size="14" dominant-baseline="middle" alignment-baseline="middle" style="fill: black;"></text></svg></div>
 			<script script type="text/javascript"> 
 			   var w = window.innerWidth * 0.9 * 0.95;
    var h = Math.ceil(w * 0.7);
