--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 				<h2 class="animated fadeInUpBig" style="color:#004953">Lumière sur les migrations</h2>
 				<h3 style="color:#004953">Déchiffrer la "crise des migrants" en Europe et en France </h3>
 				<p></p>
-				<ul class="actions">
+				<!--<ul class="actions">
 					<li>
 						<a href="#one" class="button big">En savoir plus</a>
 					</li>
-				</ul>
+				</ul> -->
 			</section>
 
 	<!-- Première partie -->	
