--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   		<h1 style="color:#004953" class="titre_section"> Migrants, migration : de quoi parle-t-on ? </h1>
 			
 		<!-- Graphe intro Irène -->
-			<h2> Réfugiés, demandeurs d'asile, déplacés internes...Définitions </h2>	
+			<h2> Réfugiés, demandeurs d'asile, déplacés internes...</h2>	
 		<div class="container"  style="display:flex;justify-content:space-between;" >
 					<div id="container"></div>
 				<div style="color:#004953,text-justify: inter-word;">  <br>
@@ -213,15 +213,15 @@
 		
 	<!-- Partie Quentin -->
 
- <div class="compteur" id="compteur" style="position: fixed;margin-left: 0;
-    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:35px; background:rgba(0,0,0,0.5); padding-top:0.4%; padding-bottom:0.5%; padding-left:14%;z-index: 4;">
+ <div class="compteur" id="compteur" style="position: fixed;margin-left: auto;
+    margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:80px; background:rgba(0,0,0,0.5); padding-top:0.4%; padding-bottom:0.5%; padding-left:20%;z-index: 4;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
 <div class="texte">
-	<font size="-1">        Depuis que vous avez ouvert cette page</font>
+	<font >        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 
-<font size="-1"> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </font>
+<font> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </font>
 	 </div>
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
