--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
     margin-right: auto; bottom: 0; left:0; right:0; width: auto; height:60px; background:rgba(0,0,0,0.5); padding-top:0.4%; padding-bottom:0.5%; padding-left:0%;z-index: 4;">
 
 <!-- <img class="deplace" width="150" height="130" src="migrant.jpg" alt="" style="border:2px black solid; margin-left:5px; margin-right: 5px;  box-shadow: 3px 3px 3px black;"/> -->
-<div class="texte">
+<div class="texte"  style="margin-left: auto;
+  margin-right: auto; width:100%";>
 	<font >        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 
