--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 					<div id="container"></div>
 				<div style="color:#004953,text-justify: inter-word;">  <br>
 					<ul>
-						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne
+						<li><b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. [[[Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne.]]]
 						</li><br>
-<li> <b>“Migrant”</b>  : toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas une statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
+<li> <b>“Migrant”</b>  : toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas un statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
 						</li><br>
 <li><b>Demandeur d’asile</b> : Un réfugié est un ancien demandeur d’asile mais tous les demandeurs d’asile ne sont pas reconnus réfugiés (dans ce cas, ils sont qualifiés de “<b>déboutés </b>”). En France, le demandeur d’asile n’a pas le droit de travailler, sauf si l’examen de sa demande dépasse une année. Le statut de réfugié permet, lui, d’obtenir un permis de séjour de dix ans et de travailler normalement. 
 						</li><br>
-→ Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.
+[[[→ Pour les gouvernements, cette distinction est importante. Les pays gèrent les migrants en vertu de leurs propres lois et procédures en matière d’immigration. Les pays gèrent les réfugiés en vertu des normes sur la protection des réfugiés et de l’asile aux réfugiés qui sont définies dans les lois nationales et les lois internationales. Les pays ont des responsabilités précises envers les demandeurs d’asile sur leurs territoires et à leurs frontières.]]]
 				<br>
-<li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire. </li>
+<li><b>Déplacé interne </b>: Contrairement aux réfugiés, les déplacés internes n’ont pas traversé de frontière internationale pour chercher asile dans un autre pays. Même s’ils ont fui pour des raisons similaires à celle des réfugiés (conflit armé, violence généralisée..) les déplacés internes demeurent légalement sous la protection de leur propre gouvernement, constituant parfois lui-même la cause de leur fuite. [[[En tant que citoyens, les déplacés internes conservent l’ensemble de leurs droits, dont celui à la protection en vertu des droits humains et des principe du droit international humanitaire.]]] </li>
 					</ul>
 				</div>
 			</div>
@@ -110,17 +110,17 @@
 		</section> 
 		
 		<!-- Camembert Aliénor -->
-		<section id="three" class="wrapper style13 align-center">
-			<h2> Le statut de réfugié, c'est quoi ? </h2>
+		<section id="three" class="wrapper style13">
+			<h2> Le statut de réfugié, et quoi d'autre ? </h2>
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-	<div style="color:#004953,text-justify: inter-word;">   Définitions  <br>
-		Un <b> réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle; qui craint avec raison d’y être persécutée du fait de son appartenance communautaire, de sa religion, de sa nationalité, de son appartenance à un certain groupe social ou de ses opinions politiques, et qui ne peut ou ne veut se réclamer de la protection de ce pays ou y retourner en raison de la dite crainte.
+	<div style="color:#004953,text-justify: inter-word;"> <br>
+		Un demandeur d'asile dont la demande est acceptée n'obtient pas nécessairement le statut de réfugié. Il existe deux autres statuts. <br>
 		<br>
 		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.).
 		<br>
-		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux statuts précédents. 
+		Le <b> statut humanitaire </b> peut également être conféré dans des cas de risque d'atteinte grave ou encore en cas de maladie mais il dépend de la législation nationale et non du droit de l'Union, contrairement aux deux autres statuts. 
 </div>
 	<div id="alienor"></div>
 
