--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</section> 
 		
 		<!-- Camembert Aliénor -->
-		<section id="three" class="wrapper style13">
+		<section id="three" class="wrapper style13 align-center">
 			<h2> Le statut de réfugié, et quoi d'autre ? </h2>
 
 <div class="container" style="display:flex;justify-content:space-between;">
