--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		
 		<link rel="icon" href="favicon-globe-b.ico" type="image/x-icon">
 		<link rel="shortcut icon" href="favicon-globe.ico" type="image/x-icon">
+		<style> body {   text-align: justify; } </style> 
 		<!-- Fin -->
 	</head>
 	<body class="landing">
