--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage"> 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px black solid; margin-left:15px;    box-shadow: 3px 3px 3px  rgba(227,0,27,0.5);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #e48400 solid; margin-left:15px; "/>
 
 	<div class="element2"> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
 
@@ -259,7 +259,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style='background-color: transparent;'> En vérité, MLP se réfère a tel chiffre <br>Or ce chiffre n'est pas correct dans le sens où <br>Elles auraient du dire :"Blablabla" 
+<div class="devrait1" style='background-color: transparent;border:3px solid #e48400;'> En vérité, MLP se réfère a tel chiffre <br>Or ce chiffre n'est pas correct dans le sens où <br>Elles auraient du dire :"Blablabla" 
 </div>
 </div>
 
@@ -267,7 +267,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage"> 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px; "/>
 
 	<div class="element2"> <p class="triangle-right left">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
 
@@ -280,12 +280,49 @@ counterID=setInterval(counterUpdate, 2500)
 </div>
 </div>
 		
-<!-- Copé -->
+<!-- Macron -->
 <div class="gen">
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-François Copé" src="cope.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px rgba(7,86,152,0.8);"/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #0F52Ba solid; margin-left:15px;  "/>
+
+  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
+
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+</div>
+</div>
+	
+<!-- Hamon -->
+<div class="gen">
+
+<div class="roundedImage" > 
+
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+
+  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
+
+</p> </div>
+
+
+</div>
+
+<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+</div>
+</div>
+	
+<!-- Mélenchon -->
+	
+<div class="gen">
+
+<div class="roundedImage" > 
+
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
 
