--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	<font >        Depuis que vous avez ouvert cette page</font>
 <span id="counter">0000</span>
 
-<font> personnes dans le monde ont été déplacées pour cause de conflit ou de catastrophe climatique </font>
+<font> personnes dans le monde ont été déplacées pour cause de conflits ou de catastrophes climatiques. </font>
 	 </div>
 <script type="text/javascript">
 counterID=setInterval(counterUpdate, 2500)
