--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" src="lepen.png" data-placement="left" alt="Marine Le Pen" title="Marine Le Pen" style="border:2px #e48400 solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right  left2" width="100">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
+	<div class="element2"> <p class="triangle-right  left2" width="100" style="font-style: italic;">Contre la droite du fric et la gauche du fric, je suis la candidate de la France du peuple !
 
 </p> </div>
 
@@ -269,14 +269,14 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip" data-placement="left" title="François Fillon" src="fillon.png" alt="" style="border:2px #d1e231 solid; margin-left:15px; "/>
 
-	<div class="element2"> <p class="triangle-right left">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
+	<div class="element2"> <p class="triangle-right left" style="font-style: italic;">L’immense majorité des personnes qui étaient à Calais ou à Paris ne sont pas en réalité des demandeurs d’asile
 
 </p> </div>
 
 
 </div>
 		
-<div class="devrait1" style="background-color:  transparent;"> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
+<div class="devrait1" style="background-color:  transparent; border:3px solid #d1e231;"> Pourtant, selon l’OFPRA, «depuis octobre 2015, 80% des 7 000 personnes mises à l’abri dans les CAO (Centres d’accueil et d’orientation) ont déposé une demande d’asile selon les données du ministère de l’intérieur»
 </div>
 </div>
 		
@@ -285,16 +285,16 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #0F52Ba solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	
@@ -305,14 +305,14 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #933d41 "> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	
@@ -324,14 +324,14 @@ counterID=setInterval(counterUpdate, 2500)
 
     <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
-  <div class="element2"> <p class="triangle-right left">On est aujourd’hui le premier hotspot d’Europe
+  <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
 </p> </div>
 
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #009688"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	</div>
