--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ counterID=setInterval(counterUpdate, 2500)
 					</header>
 
 <div class="container">
-<div class="gen2">
+<!-- <div class="gen2">
 
     <img class="element22" width="100" height="100" src="inconnu.jpg" alt="" style="border:2px black solid; margin-left:15px;   box-shadow: 3px 3px 3px black;"/>
 
@@ -245,7 +245,7 @@ counterID=setInterval(counterUpdate, 2500)
 </div>
 </div>
 
-
+-->
 <div class="gen">
 
 <div class="roundedImage"> 
@@ -285,7 +285,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Emmanuel Macron" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left0" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
@@ -294,7 +294,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #933d41"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	
@@ -303,7 +303,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #933d41 solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Benoit Hamon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left3 " style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
@@ -312,7 +312,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent;border:3px solid #933d41 "> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent;border:3px solid #009688 "> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	
@@ -322,7 +322,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 <div class="roundedImage" > 
 
-    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #009688 solid; margin-left:15px;  "/>
+    <img class="element" width="100" height="100" data-toggle="tooltip"  data-placement="left" title="Jean-Luc Mélenchon" src="cope.jpg" alt="" style="border:2px #0f52ba solid; margin-left:15px;  "/>
 
   <div class="element2"> <p class="triangle-right left4" style="font-style: italic;">On est aujourd’hui le premier hotspot d’Europe
 
@@ -331,7 +331,7 @@ counterID=setInterval(counterUpdate, 2500)
 
 </div>
 
-<div class="devrait1" style="background-color:  transparent; border:3px solid #009688"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
+<div class="devrait1" style="background-color:  transparent; border:3px solid #0f52ba"> Calais ne saurait être considéré comme un hotspot puisque la structure n'était pas gérée par l'Etat et n'avait pas vocation à permettre l'enregistrement des migrants.<br> De plus, affirmer que Calais est le premier centre pour migrants d’Europe n’a pas plus de sens. En Grèce, le Haut-commissariat aux réfugiés des Nations unies a enregistré, entre janvier et novembre 2016, 162 363 arrivées. En France, le gouvernement estime avoir mis à l’abri «plus de 6000 migrants.
 </div>
 </div>
 	</div>
